discord: fix scrollbars

--- a/css/src/discord.sass
+++ b/css/src/discord.sass
@@ -53,6 +53,9 @@ $cyan: #d09a55
   --textbox-markdown-syntax: #{$comment}
 
   --scrollbar-thin-thumb: #{$accent}
+  --scrollbar-thin-track: #{$bgdark}
+  --scrollbar-auto-thumb: #{$accent}
+  --scrollbar-auto-track: #{$bgdark}
   --scrollbar-auto-scrollbar-color-thumb: #{$accent}
   --scrollbar-auto-scrollbar-color-track: #{$bgdark}
 
